--- a/README
+++ b/README
@@ -1,4 +1,2 @@
-This is my implementation of Tetris on command line in C++.
-This implementation only works on Windows, since I use conio.h for unbuffered key input and I don't use POSIX threads.
-It also does not have rotation made yet, and the scoreboard needs fixing. 
-Any comments or suggestions, let me know!
+A current repository of all the solo projects I may do.
+These projects are either for fun, or a job where the employer has no proprietary rights to the software, and I choose to upload it.
